add new field in db
